language/move-prover/tests/sources/functional/aborts_if_with_code.exp
Move prover returns: exiting with boogie verification errors
error: function does not abort with any of the expected codes

    ┌── tests/sources/functional/aborts_if_with_code.move:69:5 ───
    │
 69 │     fun aborts_if_with_code_mixed_invalid(x: u64) {
    │     ^
    ·
 74 │             abort(2)
    │             -------- abort happened here with code `0x2`
    │
    =     at tests/sources/functional/aborts_if_with_code.move:69:5: aborts_if_with_code_mixed_invalid
    =         x = <redacted>
    =     at tests/sources/functional/aborts_if_with_code.move:75:10: aborts_if_with_code_mixed_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:70:9: aborts_if_with_code_mixed_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:73:9: aborts_if_with_code_mixed_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:74:13: aborts_if_with_code_mixed_invalid (ABORTED)

error: function does not abort with any of the expected codes

     ┌── tests/sources/functional/aborts_if_with_code.move:97:5 ───
     │
  97 │     fun aborts_with_invalid(x: u64) {
     │     ^
     ·
 102 │             abort(2)
     │             -------- abort happened here with code `0x2`
     │
     =     at tests/sources/functional/aborts_if_with_code.move:97:5: aborts_with_invalid
     =         x = <redacted>
     =     at tests/sources/functional/aborts_if_with_code.move:103:10: aborts_with_invalid
     =     at tests/sources/functional/aborts_if_with_code.move:98:9: aborts_with_invalid
     =     at tests/sources/functional/aborts_if_with_code.move:101:9: aborts_with_invalid
     =     at tests/sources/functional/aborts_if_with_code.move:102:13: aborts_with_invalid (ABORTED)

error: function does not abort with any of the expected codes

     ┌── tests/sources/functional/aborts_if_with_code.move:123:5 ───
     │
 123 │     fun aborts_with_mixed_invalid(x: u64) {
     │     ^
     ·
 128 │             abort(1)
     │             -------- abort happened here with code `0x1`
     │
     =     at tests/sources/functional/aborts_if_with_code.move:123:5: aborts_with_mixed_invalid
     =         x = <redacted>
     =     at tests/sources/functional/aborts_if_with_code.move:129:10: aborts_with_mixed_invalid
     =     at tests/sources/functional/aborts_if_with_code.move:124:9: aborts_with_mixed_invalid
     =     at tests/sources/functional/aborts_if_with_code.move:127:9: aborts_with_mixed_invalid
     =     at tests/sources/functional/aborts_if_with_code.move:128:13: aborts_with_mixed_invalid (ABORTED)

error: function does not abort with any of the expected codes

    ┌── tests/sources/functional/aborts_if_with_code.move:29:5 ───
    │
 29 │     fun conditional_abort_invalid(x: u64, y: u64): u64 {
    │     ^
    ·
 31 │             abort 2
    │             ------- abort happened here with code `0x2`
    │
    =     at tests/sources/functional/aborts_if_with_code.move:29:5: conditional_abort_invalid
    =         x = <redacted>,
    =         y = <redacted>
    =     at tests/sources/functional/aborts_if_with_code.move:36:9: conditional_abort_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:30:9: conditional_abort_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:31:13: conditional_abort_invalid (ABORTED)

error: function does not abort with any of the expected codes

    ┌── tests/sources/functional/aborts_if_with_code.move:45:5 ───
    │
 45 │     fun exec_failure_invalid(x: u64): u64 {
    │     ^
    ·
 46 │         10 / x
    │         ------ abort happened here with execution failure
    │
    =     at tests/sources/functional/aborts_if_with_code.move:45:5: exec_failure_invalid
    =         x = <redacted>
    =     at tests/sources/functional/aborts_if_with_code.move:46:9: exec_failure_invalid (ABORTED)
